# hledger-wasm

./: Dockerfile.wasm
hledger-wasm/: .gitignore  README.md  build.sh  cabal.project  package-lock.json  package.json
hledger-wasm/bridge/: Main.hs  hledger-wasm-bridge.cabal
hledger-wasm/js/: hledger-bridge.js
hledger-wasm/terminal-size-stub/: terminal-size.cabal
hledger-wasm/terminal-size-stub/System/Console/Terminal/: Size.hs
