cabal-version:      2.4
name:               terminal-size
version:            0.3.4
synopsis:           Stub for WASM
license:            BSD-3-Clause
build-type:         Simple

library
  exposed-modules:  System.Console.Terminal.Size
  build-depends:    base >=4 && <5
  hs-source-dirs:   .
  default-language: Haskell2010
